Changes from jTDS 0.9-rc2
=========================

09/28/2004 - Alin Sinpalean
 o Partially updated the FAQ (still some more changes needed).
 o Updated driver version as returned by Driver and DatabaseMetaData to "0.9".
 o Minor javadoc cleanup.
 o Corrected bug [1036059] getTimestamp with Calendar applies tzone offset
   wrong way. The getTimestamp(), getTime() and getDate() methods with Calendar
   parameters were applying the time zone difference the same way as the set
   methods (hope it's not the set methods that were wrong, the JDBC spec is
   VERY vague about how the Calendar should be used).
 o Corrected bug [1036058] DataSource implementation broken. Thanks, Mike for
   finding this before the new release.

09/27/2004 - Alin Sinpalean
 o Update counts are read and cached completely (either until the end of the
   response or until a ResultSet is encountered) and exceptions are thrown when
   an output parameter is read before being set. This means that stored
   procedures that return only update counts are processed completely when
   executed and output parameter values are available right away.
 o Implemented some more support for spcursorprepare (still not complete, so
   not used yet).
 o Updated the documentation of sp_cursorprepare in apiCursors.html and some
   minor things in TDS.html.
 o prepareSql=3 (sp_prepare) is supported by TDS 7.0, small update to use it in
   jTDS (until now it was downgraded to sp_executesql -- prepareSql=2).

09/24/2004 - Alin Sinpalean
 o Updated JtdsDatabaseMetaData.getDriverVersion() to also include misc
   version information.

09/23/2004 - Alin Sinpalean
 o Applied Mike's patch [1030475] Scrollable/Updateable result sets for Sybase.

09/23/2004 - Alin Sinpalean
 o Changed the default TDS version to 8.0 when connecting to SQL Server.
 o Corrected bug [1032278] metadata.getColumnClassName not match
   resultset.getObject. Also improved handling of LOB columns in updateable