@@ -51,8 +51,7 @@
 
 
       <p class="title">License</p>
-      <p>jTDS is Free Software. Starting with release 0.8-rc1 jTDS is made
-        available under the terms of the
+      <p>jTDS is Free Software. jTDS is made available under the terms of the
         <a href="http://www.gnu.org/copyleft/lesser.html">GNU Lesser General
         Public License</a>. The
         <a href="http://www.gnu.org/copyleft/lesser.html">LGPL</a> is
@@ -63,10 +62,18 @@
         code.</p>
       <p>If you modify jTDS and redistribute your modifications, the LGPL
         applies, basically meaning that you'll have to make the modified version
-        publicly available under the LGPL license too.</p>
-      <p>jTDS includes software released under a BSD license by CDS Networks,
-        Inc. and/or Craig Spannring, the author of the original FreeTDS JDBC
-        driver from which jTDS is derived. The copyright notice follows:</p>
+        publicly available under the LGPL license too. This ensures that all
+        users of the software have access to all future improvements.</p>
+      <p>jTDS was initially based on software released under a BSD license by
+        CDS Networks, Inc. and/or Craig Spannring, the author of the original
+        FreeTDS JDBC driver from which jTDS is derived. Between releases 0.8.x
+        and 0.9 jTDS was completely rewritten so the BSD license no longer
+        applies. For historical reasons and to recognize the effort of the
+        original developer, we chose to also display here that copyright
+        notice. Please note that you do not have to do the same or follow the
+        terms of this license, whether you want to use jTDS in a project of
+        your own or derive ir. The original FreeTDS copyright notice follows:
+        </p>
       <blockquote>
         <p>
           Copyright 1998, 1999 CDS Networks, Inc., Medford Oregon
